[package]
name = "hyper-compress"
version = "0.0.1"
authors = ["Eliza Weisman <eliza@buoyant.io>"]

[dependencies]
http = "^0.1"
hyper = "^0.11"
futures = "^0.1.17"
flate2 = { version = "^1.0", features = ["tokio"] }
tokio-io = "^0.1"
log = "^0.4"

[dev-dependencies]
pretty_env_logger = "0.2.0"
tokio-core = "^0.1"
